--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="pb-[68px]">
-            <button id="try-btn" class="font-bold text-white bg-purple py-5 px-28 rounded-2xl drop-shadow-xl my-6 shadow w-full">Try it free
+            <button id="try-btn" class="font-bold text-white bg-purple py-5 px-12 md:px-28 rounded-2xl drop-shadow-xl my-6 shadow w-full">Try it free
                 7
                 days <span class="font-light">then $20/mo. thereafter</span></button>
             <div class="grid grid-rows-4 bg-milk-white rounded-2xl drop-shadow-2xl border border-light-gray text-dark-gray text-sm py-10 font-semibold shadow">
