--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body class="px-6 md:px-0">
 <main>
-    <div class="md:grid md:grid-cols-2 font-poppins lg:px-[165px] px-12 place-items-center">
+    <div class="md:grid md:grid-cols-2 font-poppins lg:px-[165px] px-12 place-items-center h-screen">
         <div class="text-center">
             <h2 class="md:text-5xl text-3xl text-white font-bold pb-[11px] py-20 md:py-0">Learn to code by watching
                 others</h2>
