--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         }
     </style>
 </head>
-<body class="px-6 md:px-0">
+<body class="px-6 md:px-0 flex h-screen items-center justify-center">
 <main>
-    <div class="md:grid md:grid-cols-2 font-poppins lg:px-[165px] px-12 place-items-center h-screen">
+    <div class="md:grid md:grid-cols-2 font-poppins lg:px-[165px] px-12 place-items-center m-auto">
         <div class="text-center">
             <h2 class="md:text-5xl text-3xl text-white font-bold pb-[11px] py-20 md:py-0">Learn to code by watching
                 others</h2>
@@ -103,12 +103,6 @@
     </div>
 </main>
 
-<footer>
-    <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-    </p>
-</footer>
 <script src="main.js"></script>
 </body>
 </html>
